# dancesWithClaws

./: .gitignore  .oxlintrc.json  Dockerfile  Dockerfile.proxy  Dockerfile.sandbox  Dockerfile.sandbox-browser  README.md  bootstrap.md  docker-compose.yml  hsm-blueprint.yaml  openclaw.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: android-release.yml  auto-response.yml  ci-build-artifacts-testbox.yml  ci.yml  codeql-critical-quality.yml  codeql.yml  control-ui-locale-refresh.yml  crabbox-hydrate.yml  deploy-logan.yml  docker-release.yml  docs-sync-publish.yml  docs.yml  full-release-validation.yml  hsm-tests.yml  install-smoke-reusable.yml  (+30 more)
.reviews/: mostlySecure.core-developer.md  mostlySecure.domain-expert.md  mostlySecure.junior-developer.md  mostlySecure.security-auditor.md  mostlySecure.technical-writer.md
config/: markdownlint-cli2.jsonc
deploy/: Caddyfile  docker-compose.logan.yml  setup.sh
docs/: building-plugins.md  docs.json  docs_map.md  moltbook-api.md  pi.md  security.md  setup-windows.md
scripts/: check-duplicates.mjs  deadcode-exports.baseline.mjs  deadcode-unused-files.allowlist.mjs  format-staged.js  logan-docker-smoke.sh  logan-gateway-smoke.ps1  logan-wasm-agent-smoke.ps1  logan-wasm-smoke.ps1  sandbox-setup.sh  sync-openclaw-label-colors.mjs
tools/logan-wasm-sandbox/: Cargo.toml  build.rs
tools/logan-wasm-sandbox/src/: allowlist.rs  http_host.rs  lib.rs  main.rs  policy.rs  runtime.rs
tools/logan-wasm-sandbox/tests/: allowlist_tests.rs  http_policy_tests.rs
workspace/: AGENT.md  HEARTBEAT.md  MEMORY.md
(+240 files in other folders)
