[package]
name = "logan-wasm-sandbox"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
thiserror = "2"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
wasmtime = "28"
wasmtime-wasi = { version = "28", features = ["preview1"] }
anyhow = "1"

[dev-dependencies]
